Ajustado erro lint do código

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
     "env": {
-        "node": true,
+        "browser": true,
         "commonjs": true,
         "es2021": true
     },
@@ -11,6 +11,5 @@
         "ecmaVersion": "latest"
     },
     "rules": {
-        "linebreak-style": ["error", "windows"]
     }
 }
