--- a/package.json
+++ b/package.json
@@ -1,12 +1,26 @@
 {
-  "name": "projetodesafio_semana4",
-  "version": "1.0.0",
-  "description": "Desafio da semana 4",
-  "main": "index.js",
+  "name": "projetodesafio-semana4",
+  "version": "1.0.1",
+  "private": true,
   "scripts": {
+    "start": "node ./bin/www",
     "lint": "eslint **/*.js --ignore-pattern node_modules/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "^4.18.2",
+    "http-errors": "~1.6.3",
+    "jade": "^0.29.0",
+    "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.41.0",
+    "eslint-config-google": "^0.14.0"
+  },
+  "description": "Desafio da Semana 4",
+  "main": "app.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/washingtoncaraujo/ProjetoDesafio_Semana4.git"
@@ -16,12 +30,5 @@
   "bugs": {
     "url": "https://github.com/washingtoncaraujo/ProjetoDesafio_Semana4/issues"
   },
-  "homepage": "https://github.com/washingtoncaraujo/ProjetoDesafio_Semana4#readme",
-  "dependencies": {
-    "express": "^4.18.2"
-  },
-  "devDependencies": {
-    "eslint": "^8.41.0",
-    "eslint-config-google": "^0.14.0"
-  }
+  "homepage": "https://github.com/washingtoncaraujo/ProjetoDesafio_Semana4#readme"
 }
